Update app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ githubid.followersurl=/users/{id}/followers
 githubid.userurl=/users/{id}
 
 #header properties
-githubid.token=token 874a22b8eb7304a0ea4e60ead4cf8f604b3dced6
+githubid.token=token
 githubid.useragent=githubid_webClient
 githubid.contenttype=application/vnd.github.v3+json
